add back button, hover-link style

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,10 @@
 {
-    "nav": {
-        "home": "Home",
-        "about": "About",
-        "lyrics": "Lyrics"
-    }
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "lyrics": "Lyrics"
+  },
+  "backButton": {
+    "content": "Back"
+  }
 }
