--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -1,7 +1,10 @@
 {
-    "nav": {
-        "home": "ホーム",
-        "about": "紹介",
-        "lyrics": "歌詞"
-    }
+  "nav": {
+    "home": "ホーム",
+    "about": "紹介",
+    "lyrics": "歌詞"
+  },
+  "backButton": {
+    "content": "前のページ"
+  }
 }
