--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,10 +1,11 @@
 {
-  "nav": {
-    "home": "Home",
-    "about": "About",
-    "lyrics": "Lyrics"
-  },
-  "backButton": {
-    "content": "Back"
-  }
+    "nav": {
+        "home": "Home",
+        "about": "About",
+        "lyrics": "Lyrics",
+        "memories": "Memories"
+    },
+    "backButton": {
+        "content": "Back"
+    }
 }
