--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -1,10 +1,11 @@
 {
-  "nav": {
-    "home": "ホーム",
-    "about": "紹介",
-    "lyrics": "歌詞"
-  },
-  "backButton": {
-    "content": "前のページ"
-  }
+    "nav": {
+        "home": "ホーム",
+        "about": "紹介",
+        "lyrics": "歌詞",
+        "memories": "思い出"
+    },
+    "backButton": {
+        "content": "前のページ"
+    }
 }
